--- a/public/css/style.mobile.scss
+++ b/public/css/style.mobile.scss
@@ -105,3 +105,4 @@
 @import '../../assets/css/states/responsive/margin';
 @import '../../assets/css/states/responsive/padding';
 @import '../../assets/css/states/responsive/position';
+@import '../../assets/css/states/responsive/text';
