--- a/views/index.html
+++ b/views/index.html
@@ -52,6 +52,7 @@
     <script src="/public/templates/commons/modules/auth/forms/remember.tag" type="riot/tag"></script>
     <script src="/assets/templates/modules/notify.html" type="riot/tag"></script>
     <script src="/assets/templates/modules/loader.html" type="riot/tag"></script>
+    <script src="/assets/templates/ui/input.html" type="riot/tag"></script>
     <script src="/public/templates/commons/popup/blogSubscribe.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/popup/blogSubscribeForm.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/icons/social/icon-fb.tag" type="riot/tag"></script>
