--- a/views/jobs.html
+++ b/views/jobs.html
@@ -34,7 +34,7 @@
     <!-- <script src="/assets/js/libs/jquery.min.js"></script>
     <script src="/assets/js/libs/jquery.mobile.custom.min.js"></script>
     <script src="/assets/js/libs/modernizr.custom.js"></script>
-    <script src="/assets/js/libs/fastclick.min.js"></script>
+    <script src="/assets/js/libs/fastclick.js"></script>
     <script src="/assets/js/libs/riot/riot+compiler.update.js"></script>
     <script src="/assets/js/libs/baobab.js"></script>
     <script src="/assets/js/libs/underscore-min.js"></script>
@@ -77,6 +77,11 @@
     <script src="/public/templates/commons/icons/social/icon-dk.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/icons/social/icon-gl.tag" type="riot/tag"></script> -->
     <script src="/public/js/templates.jobs.js"></script>
+    <script src="/assets/templates/ui/icons/icon-control.html" type="riot/tag"></script>
+    <script src="/public/templates/client/jobs/search/searchContent.html" type="riot/tag"></script>
+    <script src="/public/templates/client/jobs/search/filter/searchFilter.html" type="riot/tag"></script>
+    <script src="/public/templates/client/jobs/search/panel/mobile/searchPanel.html" type="riot/tag"></script>
+    <script src="/public/templates/client/jobs/search/filter/mobile/searchFilterScreen.html" type="riot/tag"></script>
 
     <!--/ JS components /-->
     <!-- <script src="/assets/js/components/commons/app.js"></script>
@@ -85,23 +90,17 @@
     <script src="/assets/js/components/commons/common.js"></script>
     <script src="/assets/js/components/commons/utils.js"></script>
     <script src="/assets/js/components/commons/modules.js"></script>
-    <script src="/assets/js/components/features/premium.js"></script>
-    <script src="/assets/js/components/features/navbar.js"></script>
+    <script src="/assets/js/components/features/links.js"></script>
 
     <script src="/public/js/commons/config.js"></script>
     <script src="/public/js/commons/metrika.js"></script>
     <script src="/public/js/commons/sections.js"></script>
     <script src="/public/js/store/jobs/dictionary.js"></script>
 
-    <script src="/assets/js/plugins/chartRadial.js"></script>
-    <script src="/assets/js/plugins/animate.js"></script>
-    <script src="/assets/js/plugins/slider.js"></script>
     <script src="/assets/js/plugins/metrika.js"></script>
     <script src="/assets/js/plugins/share.js"></script>
     <script src="/assets/js/plugins/eventsEmitter.js"></script>
-    <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
-    <script src="/assets/js/plugins/scroll/scroll.Parallax.js"></script>
-    <script src="/assets/js/libs/skycons/skycons.js"></script>
+    <script src="/assets/js/plugins/scroll/scroll.RefreshFix.js"></script>
 
     <script src="/public/js/sections/nav.js"></script>
     <script src="/public/js/sections/home.js"></script>
@@ -112,6 +111,9 @@
     <script src="/public/js/sections/jobs/jobsHome.js"></script>
     <script src="/public/js/sections/jobs/jobsSearch.js"></script> -->
     <script src="/public/js/app.jobs.js"></script>
+    <script src="/assets/js/components/features/jobsSearch.js"></script>
+    <script src="/public/js/sections/jobs/jobsSearch.js"></script>
+    <script src="/public/js/sections/jobs/mobile/jobsSearch.js"></script>
 
     {% if clusters %}
     <script>
