--- a/public/templates/client/jobs/search/panel/searchPanel.html
+++ b/public/templates/client/jobs/search/panel/searchPanel.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-10 col-md-4">
             <div class="jobs__search__nav__options">
                 <jobs-search-panel-settings></jobs-search-panel-settings>
                 <jobs-search-panel-views></jobs-search-panel-views>
